v0.9.6
- Fixed UMCloudDj issue #1 on spaces in usernames: https://github.com/UstadMobile/UMCloudDj-Code/issues/1
- Fixed issue #1
- Fixed issue #2 https://github.com/UstadMobile/UMCloudDj-Code/issues/2


v0.9.5
- Fixed improper redirect in /signup/
- Spaces not allowed to be entered in html user create forms. 
- Updated lrs statement info models to account for timestamp of the original statement
- Performance upgrade to Usage reports. Statement Group Info objects now work with Statement Info directly improving performance. 
- All statements report for each organisations is now paginated to improve performance Reports view updated with new link as well. 
- Changed USE_TZ from False to True in UMCloudDj/settings.py for test modes
- Fixed bug in determining Course (if not afghan literacy, variable becomes None.
- Installed pytz because of Django 1.6 release notes: you must now install pytz to work with Sqlite3 if USE_TZ=True in your settings.py.
- Fixed a bug in uploadeXe/views.py def list() in finishing elp upload (wasn't redirecting to apt)
- Improved Code Coverage and bug fixes within. 
- Fixed get_course_blocks API to account for tincan id as well as Primary key Also Updated the unit tests.
- Updated build process to directly use exe_do (without installing it on test system) for testing. This is done such that exe doesn't hurt other parts
  on the test server.

v0.9.4
- If elp id is not found in blocks, then the block will be marked as failed (still internally possible to bring it back to life, but to the user, it will fail.)
- Fixed register bug (template not found, was pointing to old template, updated)
- Fixed bug that throws 500 when checkeing statements with no School assigned.
- Fixed speed and Usage report bugs with views and htmls pages.

v0.9.3
- Updated blocks view to show updated date instead of published date.
- Fixed statement assignment to courses and blocks for multiple consecutive launched statements.

v0.9.2
- Fixed bugs